deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mia
  name: mia
  namespace: mia
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: mia
  sessionAffinity: None
  type: ClusterIP
