deploy/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
  labels:
    app: mia
  name: mia
  namespace: mia
spec:
  rules:
    - host: georgia-drive.com
      http:
        paths:
          - backend:
              service:
                name: mia
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - georgia-drive.com
      secretName: georgia-drive-tls
